# pmsm_sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: pmsm.h
notes/: pmsm.lyx
param/: pmsm.yaml
script/: plotter.py
src/: main.cpp  pmsm.cpp
